// ============================================================================
// /finance/gl-journal-entry-service (版本 3.5 - 终极生产级完整版)
// 描述: 总账日记账管理服务，核心对接 SAP ACDOCA / BSEG 逻辑。
//       支持：创建、批量、冲销、模拟、过账、挂账、重复凭证、清账建议、
//       税务计算、外币重估、期末结转、批量输入会话、并行会计、字段拆分、
//       打印预览、附件、多级审批、审计追踪、高级分析、流式查询等。
// ----------------------------------------------------------------------------
// 设计基线：
// - 符合 SAP S/4HANA Universal Journal 架构
// - 严格遵循 BAPI_ACC_DOCUMENT_POST 的接口规范
// - 金额、数量等关键字段均采用字符串（防丢精）+ 币种/单位
// ============================================================================

syntax = "proto3";

package fi.gl.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/openapiv2.proto";
import "common/common.proto";

// OpenAPI 全局配置
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "General Ledger Journal Entry Service API"
    version: "0.1.0"
    description: "总账日记账管理服务 - 提供财务凭证创建、过账、冲销、审批及高级财务分析功能"
    contact: {
      name: "GL Team"
      email: "gl@yourproject.com"
    }
  }
  host: "localhost:8080"
  base_path: "/"
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
  security_definitions: {
    security: {
      key: "bearer_auth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Bearer token for authentication"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer_auth"
      value: {}
    }
  }
};

// ============================================================================
// 服务定义: GlJournalEntryService
// ============================================================================

service GlJournalEntryService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "总账日记账管理服务"
    external_docs: {
      url: "https://yourproject.com/docs/finance/gl";
      description: "GL 服务详细文档";
    }
  };

  // --------------------------------------------------------------------------
  // === 基础凭证操作 ===
  // --------------------------------------------------------------------------

  // 创建凭证（草稿或立即过账）
  rpc CreateJournalEntry(CreateJournalEntryRequest) returns (JournalEntryResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Journal Entry Basics"
      summary: "创建日记账凭证"
    };
  }

  // 获取凭证详情
  rpc GetJournalEntry(GetJournalEntryRequest) returns (JournalEntryDetail) {
    option (google.api.http) = {
      get: "/api/v1/finance/gl/journal-entries/{journal_entry_id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Journal Entry Basics"
      summary: "获取凭证详情"
    };
  }

  // 冲销凭证（Full Reversal）
  rpc ReverseJournalEntry(ReverseJournalEntryRequest) returns (JournalEntryResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries/{journal_entry_id}/reverse"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Journal Entry Basics"
      summary: "冲销凭证"
    };
  }

  // 查询凭证列表
  rpc ListJournalEntries(ListJournalEntriesRequest) returns (ListJournalEntriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/gl/journal-entries"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Journal Entry Basics"
      summary: "查询凭证列表"
    };
  }

  // 流式查询凭证 (New)
  rpc StreamJournalEntries(ListJournalEntriesRequest) returns (stream JournalEntryDetail) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries:stream"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Journal Entry Advanced"
      summary: "流式查询凭证"
    };
  }

  // --------------------------------------------------------------------------
  // === 批量操作 ===
  // --------------------------------------------------------------------------

  // 批量创建凭证
  rpc BatchCreateJournalEntries(BatchCreateJournalEntriesRequest) returns (BatchCreateJournalEntriesResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries:batchCreate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Batch Operations"
      summary: "批量创建凭证"
    };
  }

  // 批量冲销凭证
  rpc BatchReverseJournalEntries(BatchReverseJournalEntriesRequest) returns (BatchReverseJournalEntriesResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries:batchReverse"
      body: "*"
    };
  }

  // --------------------------------------------------------------------------
  // === 更新与管理 ===
  // --------------------------------------------------------------------------

  // 更新凭证（仅限未过账部分字段）
  rpc UpdateJournalEntry(UpdateJournalEntryRequest) returns (JournalEntryResponse) {
    option (google.api.http) = {
      put: "/api/v1/finance/gl/journal-entries/{journal_entry_id}"
      body: "*"
    };
  }

  // 删除凭证（仅限草稿）
  rpc DeleteJournalEntry(DeleteJournalEntryRequest) returns (JournalEntryResponse) {
    option (google.api.http) = {
      delete: "/api/v1/finance/gl/journal-entries/{journal_entry_id}"
    };
  }

  // 过账凭证（Post Draft）
  rpc PostJournalEntry(PostJournalEntryRequest) returns (JournalEntryResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries/{journal_entry_id}/post"
      body: "*"
    };
  }

  // --------------------------------------------------------------------------
  // === 财务高级功能 ===
  // --------------------------------------------------------------------------

  // 验证凭证合法性
  rpc ValidateJournalEntry(ValidateJournalEntryRequest) returns (ValidationResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries/validate"
      body: "*"
    };
  }

  // 模拟过账效果
  rpc SimulateJournalEntry(SimulateJournalEntryRequest) returns (SimulationResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries/simulate"
      body: "*"
    };
  }

  // 挂账执行（Document Parking）
  rpc ParkJournalEntry(ParkJournalEntryRequest) returns (ParkJournalEntryResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/journal-entries/park"
      body: "*"
    };
  }

  // 清账未清项目（Clearing Open Items）
  rpc ClearOpenItems(ClearOpenItemsRequest) returns (ClearOpenItemsResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/clearing"
      body: "*"
    };
  }

  // 获取外币重估建议
  rpc RevaluateForeignCurrency(RevaluateForeignCurrencyRequest) returns (RevaluationResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/revaluation"
      body: "*"
    };
  }

  // 并行会计分类账查询
  rpc GetParallelLedgerData(GetParallelLedgerDataRequest) returns (ParallelLedgerDataResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/gl/journal-entries/{document_reference.document_number}/parallels"
    };
  }

  // --------------------------------------------------------------------------
  // === 期末处理 ===
  // --------------------------------------------------------------------------

  // 执行期间结转
  rpc CarryForwardBalances(CarryForwardBalancesRequest) returns (CarryForwardBalancesResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/carry-forward"
      body: "*"
    };
  }

  // 执行期末关账
  rpc ExecutePeriodEndClose(ExecutePeriodEndCloseRequest) returns (PeriodEndCloseResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/period-end-close"
      body: "*"
    };
  }

  // --------------------------------------------------------------------------
  // === 系统集成与报表 ===
  // --------------------------------------------------------------------------

  // 创建批量输入会话 (Batch Input Session LSMW)
  rpc CreateBatchInputSession(CreateBatchInputSessionRequest) returns (BatchInputSessionResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/gl/batch-input"
      body: "*"
    };
  }

  // 获取科目余额明细 (Analytical Request)
  rpc GetAccountLineItems(GetAccountLineItemsRequest) returns (AccountLineItemsResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/gl/accounts/{gl_account}/line-items"
    };
  }

  // 生成打印预览
  rpc GeneratePrintPreview(GeneratePrintPreviewRequest) returns (GeneratePrintPreviewResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/gl/journal-entries/{document_reference.document_number}/preview"
    };
  }
}

// ============================================================================
// 数据结构: 枚举定义 (Enums)
// ============================================================================

// 凭证状态
enum JournalEntryStatus {
  JOURNAL_ENTRY_STATUS_UNSPECIFIED = 0;
  JOURNAL_ENTRY_STATUS_DRAFT = 1;       // 草稿 (Parked)
  JOURNAL_ENTRY_STATUS_PENDING = 2;     // 待审批
  JOURNAL_ENTRY_STATUS_REJECTED = 3;    // 已驳回
  JOURNAL_ENTRY_STATUS_POSTED = 4;      // 已过账 (Posted)
  JOURNAL_ENTRY_STATUS_REVERSED = 5;    // 已冲销
  JOURNAL_ENTRY_STATUS_CLEARED = 6;     // 已清账
  JOURNAL_ENTRY_STATUS_CANCELLED = 7;   // 已取消
}

// 冲销类型
enum ReversalType {
  REVERSAL_TYPE_UNSPECIFIED = 0;
  REVERSAL_TYPE_NORMAL = 1;             // 普通冲销 (同向借贷)
  REVERSAL_TYPE_NEGATIVE = 2;           // 负数冲销 (红字冲销)
}

// 导出与分析格式
enum ExportFormat {
  EXPORT_FORMAT_UNSPECIFIED = 0;
  EXPORT_FORMAT_PDF = 1;
  EXPORT_FORMAT_EXCEL = 2;
  EXPORT_FORMAT_CSV = 3;
  EXPORT_FORMAT_HTML = 4;
}

// 支付状态
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_OPEN = 1;              // 未支付
  PAYMENT_STATUS_IN_PROGRESS = 2;       // 支付中
  PAYMENT_STATUS_PAID = 3;              // 已支付
  PAYMENT_STATUS_REJECTED = 4;          // 支付失败
}

// 清账状态
enum ClearingStatus {
  CLEARING_STATUS_UNSPECIFIED = 0;
  CLEARING_STATUS_OPEN = 1;              // 未清项
  CLEARING_STATUS_CLEARED = 2;           // 已清项
  CLEARING_STATUS_PARTIAL = 3;           // 部分清项
}

// 分类账类型
enum LedgerType {
  LEDGER_TYPE_UNSPECIFIED = 0;
  LEDGER_TYPE_LEADING = 1;              // 主分类账 (0L)
  LEDGER_TYPE_NON_LEADING = 2;          // 非主分类账 (如 1L, 2L)
  LEDGER_TYPE_EXTENSION = 3;            // 扩展分类账
}

// 期间状态
enum PeriodStatus {
  PERIOD_STATUS_UNSPECIFIED = 0;
  PERIOD_STATUS_OPEN = 1;               // 期间打开
  PERIOD_STATUS_CLOSED = 2;             // 期间关闭
  PERIOD_STATUS_LOCKED = 3;             // 期间锁定
}

// 凭证来源
enum DocumentOrigin {
  DOCUMENT_ORIGIN_UNSPECIFIED = 0;
  DOCUMENT_ORIGIN_MANUAL = 1;           // 手工输入
  DOCUMENT_ORIGIN_API = 2;              // API 自动创建
  DOCUMENT_ORIGIN_SD = 3;               // 销售集成
  DOCUMENT_ORIGIN_MM = 4;               // 采购集成
  DOCUMENT_ORIGIN_CO = 5;               // 成本分配集成
  DOCUMENT_ORIGIN_FX = 6;               // 汇兑差异
}

// ============================================================================
// 数据结构: 核心凭证模型
// ============================================================================

// 凭证抬头 (类似 SAP BKPF 表)
message JournalEntryHeader {
  string company_code = 1;             // 公司代码 (BUKRS)
  string document_type = 2;            // 凭证类型 (BLART)
  google.protobuf.Timestamp document_date = 3; // 凭证日期 (BLDAT)
  google.protobuf.Timestamp posting_date = 4;  // 过账日期 (BUDAT)
  int32 fiscal_year = 5;               // 会计年度 (GJAHR)
  int32 fiscal_period = 6;             // 会计期间 (MONAT)
  string currency = 7;                 // 货币代码 (WAERS)
  string exchange_rate = 8;            // 汇率 (KURSF)
  string reference_document = 9;       // 参考凭证号 (XBLNR)
  string header_text = 10;             // 凭证抬头文本 (BKTXT)
  DocumentOrigin origin = 11;          // 来源系统
  string logical_system = 12;          // 逻辑系统 (AWSYS)
  string ledger_group = 13;             // 分类账组 (LDGRP)
  common.v1.AuditData audit = 14; 
}

// 凭证行项目 (类似 SAP ACDOCA / BSEG 表)
message JournalEntryLineItem {
  int32 line_item_number = 1;          // 行号 (BUZEI)
  string posting_key = 2;              // 过账码 (BSCHL)
  string debit_credit_indicator = 3;   // 借贷标识 (SHKZG: S=Debit, H=Credit)
  string gl_account = 4;               // 总账科目 (HKONT)
  common.v1.AccountType account_type = 5; // 账户类型 (KOART)
  string business_partner = 6;         // 业务伙伴 (KUNNR/LIFNR)
  
  // 金额相关
  common.v1.MonetaryValue amount_in_local_currency = 7;
  common.v1.MonetaryValue amount_in_document_currency = 8;
  common.v1.MonetaryValue amount_in_group_currency = 9;
  
  // 成本对象
  string cost_center = 10;             // 成本中心 (KOSTL)
  string profit_center = 11;           // 利润中心 (PRCTR)
  string segment = 12;                 // 段 (SEGMENT)
  string internal_order = 13;          // 内部订单 (AUFNR)
  string wbs_element = 14;             // WBS 元素 (PS_PSP_PNR)
  
  // 文本与参考
  string text = 15;                    // 条目文本 (SGTXT)
  string assignment_number = 16;       // 指派编号 (ZUONR)
  
  // 税务
  string tax_code = 17;                // 税码 (MWSKZ)
  string tax_jurisdiction = 18;        // 税收辖区 (TXJCD)
  
  // 清帐信息
  string clearing_document = 19;       // 清帐凭证 (AUGBL)
  google.protobuf.Timestamp clearing_date = 20;

  // 数量
  common.v1.QuantityValue quantity = 21;
}

// 凭证税行
message TaxLineItem {
  int32 line_item_number = 1;
  string tax_code = 2;
  common.v1.MonetaryValue tax_base_amount = 3;
  common.v1.MonetaryValue tax_amount = 4;
}

// 凭证详情 (聚合对象)
message JournalEntryDetail {
  JournalEntryHeader header = 1;
  repeated JournalEntryLineItem line_items = 2;
  repeated TaxLineItem tax_items = 3;
  JournalEntryStatus status = 4;
  common.v1.SystemDocumentReference document_reference = 5;
  ClearingInformation clearing_info = 6;
  PaymentInformation payment_info = 7;
  WorkflowInformation workflow_info = 8;
  repeated AttachmentInfo attachments = 9;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

message CreateJournalEntryRequest {
  JournalEntryHeader header = 1;
  repeated JournalEntryLineItem line_items = 2;
  bool test_run = 3;
  bool post_immediately = 4;
  common.v1.RequestContext context = 99;
}

message JournalEntryResponse {
  bool success = 1;
  common.v1.SystemDocumentReference document_reference = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message GetJournalEntryRequest {
  string journal_entry_id = 1;
  common.v1.SystemDocumentReference document_reference = 2;
  common.v1.RequestContext context = 99;
}

message ReverseJournalEntryRequest {
  string journal_entry_id = 1;
  common.v1.SystemDocumentReference document_to_reverse = 2;
  string reversal_reason = 3;
  google.protobuf.Timestamp posting_date = 4;
  ReversalType reversal_type = 5;
  common.v1.RequestContext context = 99;
}

message ListJournalEntriesRequest {
  string company_code = 1;
  int32 fiscal_year = 2;
  common.v1.DateRange posting_date_range = 3;
  string document_type = 4;
  string created_by = 5;
  repeated JournalEntryStatus status_filter = 6;
  string gl_account = 7;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListJournalEntriesResponse {
  repeated JournalEntrySummary entries = 1;
  common.v1.PaginationResponse pagination = 2;
}

message JournalEntrySummary {
  common.v1.SystemDocumentReference document_reference = 1;
  google.protobuf.Timestamp document_date = 2;
  google.protobuf.Timestamp posting_date = 3;
  string header_text = 4;
  JournalEntryStatus status = 5;
  common.v1.MonetaryValue total_amount = 6;
}

message BatchCreateJournalEntriesRequest {
  repeated CreateJournalEntryRequest entries = 1;
  bool test_run = 2;
  common.v1.RequestContext context = 99;
}

message BatchCreateJournalEntriesResponse {
  common.v1.BatchOperationResult result = 1;
  repeated JournalEntryResponse responses = 2;
}

message UpdateJournalEntryRequest {
  string journal_entry_id = 1;
  common.v1.SystemDocumentReference document_reference = 2;
  JournalEntryHeader header = 3;
  repeated string update_mask = 4;
  common.v1.RequestContext context = 99;
}

message DeleteJournalEntryRequest {
  string journal_entry_id = 1;
  common.v1.SystemDocumentReference document_reference = 2;
  common.v1.RequestContext context = 99;
}

message PostJournalEntryRequest {
  string journal_entry_id = 1;
  common.v1.SystemDocumentReference document_reference = 2;
  google.protobuf.Timestamp posting_date = 3;
  common.v1.RequestContext context = 99;
}

message ValidateJournalEntryRequest {
  JournalEntryHeader header = 1;
  repeated JournalEntryLineItem line_items = 2;
  common.v1.RequestContext context = 99;
}

message ValidationResponse {
  bool is_valid = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message SimulateJournalEntryRequest {
  JournalEntryHeader header = 1;
  repeated JournalEntryLineItem line_items = 2;
  common.v1.RequestContext context = 99;
}

message SimulationResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
  JournalEntryDetail simulated_entry = 3;
}

message ParkJournalEntryRequest {
  JournalEntryHeader header = 1;
  repeated JournalEntryLineItem line_items = 2;
  string parking_reason = 3;
  common.v1.RequestContext context = 99;
}

message ParkJournalEntryResponse {
  bool success = 1;
  common.v1.SystemDocumentReference parked_document_reference = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message ClearOpenItemsRequest {
  string company_code = 1;
  common.v1.AccountType account_type = 2;
  string account_number = 3;
  repeated OpenItemToClear items_to_clear = 4;
  google.protobuf.Timestamp clearing_date = 5;
  common.v1.RequestContext context = 99;
}

message OpenItemToClear {
  common.v1.SystemDocumentReference document_reference = 1;
  int32 line_item_number = 2;
  common.v1.MonetaryValue clearing_amount = 3;
}

message ClearOpenItemsResponse {
  bool success = 1;
  common.v1.SystemDocumentReference clearing_document_reference = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message GetParallelLedgerDataRequest {
  common.v1.SystemDocumentReference document_reference = 1;
  repeated string ledgers = 2;
  common.v1.RequestContext context = 99;
}

message ParallelLedgerDataResponse {
  common.v1.SystemDocumentReference document_reference = 1;
  repeated LedgerData ledger_data = 2;
}

message LedgerData {
  string ledger = 1;
  LedgerType ledger_type = 2;
  repeated JournalEntryLineItem line_items = 3;
}

message CarryForwardBalancesRequest {
  string company_code = 1;
  int32 source_fiscal_year = 2;
  int32 target_fiscal_year = 3;
  bool test_run = 4;
  common.v1.RequestContext context = 99;
}

message CarryForwardBalancesResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message ExecutePeriodEndCloseRequest {
  string company_code = 1;
  int32 fiscal_year = 2;
  int32 fiscal_period = 3;
  common.v1.RequestContext context = 99;
}

message PeriodEndCloseResponse {
  bool success = 1;
  PeriodStatus period_status = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message CreateBatchInputSessionRequest {
  string session_name = 1;
  repeated CreateJournalEntryRequest entries = 2;
  common.v1.RequestContext context = 99;
}

message BatchInputSessionResponse {
  bool success = 1;
  string session_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message GetAccountLineItemsRequest {
  string company_code = 1;
  string gl_account = 2;
  common.v1.DateRange date_range = 3;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message AccountLineItemsResponse {
  string gl_account = 1;
  repeated JournalEntryLineItem line_items = 2;
  common.v1.PaginationResponse pagination = 3;
}

message GeneratePrintPreviewRequest {
  common.v1.SystemDocumentReference document_reference = 1;
  ExportFormat format = 2;
  common.v1.RequestContext context = 99;
}

message GeneratePrintPreviewResponse {
  bool success = 1;
  bytes print_content = 2;
  string mime_type = 3;
  string file_name = 4;
}

// --- Supporting Messages ---

message ClearingInformation {
  string clearing_document = 1;
  google.protobuf.Timestamp clearing_date = 2;
  ClearingStatus status = 3;
  common.v1.MonetaryValue clearing_amount = 4;
}

message PaymentInformation {
  PaymentStatus status = 1;
  common.v1.PaymentMethodType method = 2;
  common.v1.MonetaryValue payment_amount = 3;
  google.protobuf.Timestamp payment_date = 4;
  string payment_reference = 5;
}

message AttachmentInfo {
  string attachment_id = 1;
  string file_name = 2;
  int64 file_size = 3;
  string mime_type = 4;
  google.protobuf.Timestamp uploaded_at = 5;
}

message WorkflowInformation {
  string workflow_instance_id = 1;
  string current_step = 2;
  string status = 3;
  repeated string pending_approvers = 4;
}

message BatchReverseJournalEntriesRequest {
  repeated ReverseJournalEntryRequest entries = 1;
  common.v1.RequestContext context = 99;
}

message BatchReverseJournalEntriesResponse {
  common.v1.BatchOperationResult result = 1;
  repeated JournalEntryResponse responses = 2;
}

message RevaluateForeignCurrencyRequest {
  string company_code = 1;
  google.protobuf.Timestamp revaluation_date = 2;
  bool test_run = 3;
  common.v1.RequestContext context = 99;
}

message RevaluationResponse {
  bool success = 1;
  common.v1.SystemDocumentReference document_reference = 2;
  repeated common.v1.ApiMessage messages = 3;
}
